<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Halaman2Activity">

    <!-- Gambar gedung -->
    <ImageView
        android:id="@+id/tv_gedung_teknik"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/teknik_unsoed_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        android:contentDescription="@string/deskripsi_gedung_teknik"/>

    <!-- Logo Unsoed -->
    <ImageView
        android:id="@+id/iv_logo_unsoed"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/lambang_unsoed"
        android:contentDescription="@string/deskripsi_logo_unsoed"
        app:layout_constraintBottom_toBottomOf="@id/tv_gedung_teknik"
        app:layout_constraintRight_toRightOf="@id/tv_gedung_teknik"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <!-- Judul -->
    <TextView
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorSecondary"
        android:padding="4dp"
        android:text="Profil Lulusan"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_unsoed" />

    <!-- ScrollView untuk konten -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintTop_toBottomOf="@id/tv_gedung_teknik">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Card Profil -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="@color/material_dynamic_primary90"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_lulusan"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:padding="20dp"
                    android:text="@string/desc_lulusan"
                    android:textSize="14sp"
                    android:textStyle="italic"/>
            </com.google.android.material.card.MaterialCardView>

            <!-- LinearLayout untuk menampung kontak -->
            <LinearLayout
                android:id="@+id/linear_layout_profil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/card_profil"
                app:layout_constraintBottom_toBottomOf="parent">

                <!-- Telepon -->
                <include
                    android:id="@+id/layout_phone"
                    layout="@layout/layout_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />

                <!-- Email -->
                <include
                    android:id="@+id/layout_email"
                    layout="@layout/layout_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />

                <!-- Instagram -->
                <include
                    android:id="@+id/layout_ig"
                    layout="@layout/layout_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp" />

                <!-- Alamat -->
                <include
                    android:id="@+id/layout_location"
                    layout="@layout/layout_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Tombol Back -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="Kembali"
        android:layout_marginLeft="8dp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

